fix z-index bug for background

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -65,6 +65,7 @@ a {
   height: 100%;
   position: absolute;
   width: 100%;
+  z-index: -2;
 }
 
 @media screen and (min-width: 64em) {
